--- a/class-38/demo/async-thunk/package.json
+++ b/class-38/demo/async-thunk/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom"
   },
   "keywords": [],
   "author": "Rawan Nujoom <rawan.nujoom@gmail.com>",
@@ -16,6 +17,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "superagent": "^6.1.0"
   },
   "browserslist": {
